tests/badly_positioned_mapped_types/previously_badly_positioned.js
type C = <H>(H) => {[K in keyof H]: H[K]};
declare const c: C;
c('string')(); // error: string is not an object
